crates/science-parser/tests/snapshots/parse_items__a_const_argument_may_name_a_parameter_and_do_arithmetic.snap
---
source: crates/science-parser/tests/parse_items.rs
expression: "parse_source(\"def f[const N: Int](w: Grid[Int, N + 1]):\n    print(\\\"x\\\")\n\")"
---
Module @0..57
  Fn `f` @0..56
    generics
      ConstParam `N` @6..18
        type: Path `Int` @15..18
    params
      Param `w` @20..39
        type: Path `Grid` @23..39
          generics of `Grid`
            Path `Int` @28..31
            ConstArg @33..38
              Add @33..38
                ConstParam `N` @33..34
                Int 1 @37..38
    body: Block @46..56
      tail: Call @46..56
        callee: Path `print` @46..51
        args
          Str "x" @52..55
--- diagnostics ---
(none)
