crates/science-parser/tests/snapshots/parse_items__a_dimension_vector_with_negative_exponents.snap
---
source: crates/science-parser/tests/parse_items.rs
expression: "common::parse_source(concat!(\"type Velocity of T is Quantity of (T, 1, 0, -1, 0, 0, 0, 0)\\n\",\n\"type Pressure of T is Quantity of (T, -1, 1, -2, 0, 0, 0, 0)\\n\",))"
---
Module @0..121
  Alias `Velocity` @0..59
    generics
      TypeParam `T` @17..18
    type: Path `Quantity` @22..59
      generics of `Quantity`
        Path `T` @35..36
        ConstArg Int 1 @38..39
        ConstArg Int 0 @41..42
        ConstArg Neg @44..46
          Int 1 @45..46
        ConstArg Int 0 @48..49
        ConstArg Int 0 @51..52
        ConstArg Int 0 @54..55
        ConstArg Int 0 @57..58
  Alias `Pressure` @60..120
    generics
      TypeParam `T` @77..78
    type: Path `Quantity` @82..120
      generics of `Quantity`
        Path `T` @95..96
        ConstArg Neg @98..100
          Int 1 @99..100
        ConstArg Int 1 @102..103
        ConstArg Neg @105..107
          Int 2 @106..107
        ConstArg Int 0 @109..110
        ConstArg Int 0 @112..113
        ConstArg Int 0 @115..116
        ConstArg Int 0 @118..119
--- diagnostics ---
(none)
