crates/science-parser/tests/snapshots/parse_items__a_negative_literal_is_not_a_type.snap
---
source: crates/science-parser/tests/parse_items.rs
expression: "parse_source_allowing_errors(concat!(\"def f(x: -1): x\\n\",\n\"type Bad is Window[Int, -1.5]\\n\", \"type Worse is Window[Int, -\\\"a\\\"]\\n\",\n\"type Worst is Window[Int, -true]\\n\",))"
---
Module @0..111
  Fn `f` @0..15
    params
      Param `x` @6..10
        type: Error @9..10
  Alias `Bad` @16..45
    type: Path `Window` @28..41
      generics of `Window`
        Path `Int` @35..38
        Error @40..41
  Alias `Worse` @46..77
    type: Path `Window` @60..73
      generics of `Window`
        Path `Int` @67..70
        Error @72..73
  Alias `Worst` @78..110
    type: Path `Window` @92..105
      generics of `Window`
        Path `Int` @99..102
        Error @104..105
--- diagnostics ---
SC0104 @9..10 expected a type, found `-`
SC0100 @10..11 expected `)`, found a number literal
SC0100 @10..11 expected end of line, found a number literal
SC0104 @40..41 expected a type, found `-`
SC0100 @41..44 expected `]`, found a number literal
SC0100 @41..44 expected end of line, found a number literal
SC0104 @72..73 expected a type, found `-`
SC0100 @73..76 expected `]`, found a string literal
SC0100 @73..76 expected end of line, found a string literal
SC0104 @104..105 expected a type, found `-`
SC0100 @105..109 expected `]`, found `true`
SC0100 @105..109 expected end of line, found `true`
