crates/science-parser/tests/snapshots/parse_items__a_space_after_the_minus_does_not_change_the_const_argument.snap
---
source: crates/science-parser/tests/parse_items.rs
expression: spaced
---
Module @0..33
  Alias `Row` @0..32
    type: Path `Window` @12..32
      generics of `Window`
        Path `Int` @23..26
        ConstArg Neg @28..31
          Int 1 @30..31
--- diagnostics ---
(none)
