crates/science-parser/tests/snapshots/parse_items__a_statement_and_a_declaration_share_a_file.snap
---
source: crates/science-parser/tests/parse_items.rs
expression: "parse_report(vec![Let, id(\"x\"), Be, int(1), Newline, Type, id(\"Doc\"), Colon,\nNewline, Indent, id(\"title\"), Colon, id(\"String\"), Newline, Dedent,])"
---
Module @0..27
  Record `Doc` @7..27
    fields
      Field `title` @15..27
        type: Path `String` @21..27
  Fn `main` @0..7
    ret: Nullable @7..7
      Path `Error` @7..7
    body: Block @0..7
      Let `x` @0..7
        value: Int 1 @6..7
      tail: Null @7..7
--- diagnostics ---
(none)
