crates/science-parser/tests/snapshots/parse_items__choice_with_positional_payloads.snap
---
source: crates/science-parser/tests/parse_items.rs
expression: "parse_report(vec![Choice, id(\"Result\"), LBracket, id(\"T\"), Comma, id(\"E\"),\nRParen, Colon, Newline, Indent, id(\"Ok\"), LParen, id(\"T\"), RParen, Newline,\nid(\"Err\"), LParen, id(\"E\"), RParen, Newline, Dedent,])"
---
Module @0..29
  Choice `Result` @0..16
    generics
      TypeParam `T` @13..14
      TypeParam `E` @15..16
--- diagnostics ---
SC0100 @16..17 expected `]`, found `)`
SC0100 @16..17 expected `:`, found `)`
SC0101 @16..17 expected a declaration (`def`, `tool`, `type`, `choice`, `interface`, `const`, `use`, or a type followed by `implements` or `has`) or a statement, found `)`
