crates/science-parser/tests/snapshots/parse_items__empty_module.snap
---
source: crates/science-parser/tests/parse_items.rs
expression: "parse_report(vec![])"
---
Module @0..0
--- diagnostics ---
(none)
